fixed image scaling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ article {
 img {
   border-radius: 10px;
   box-shadow: 0 3px 10px rgba(0,0,0,.1);
+  max-width: 100%;
 }
 
 img.social {
